fixed search bug

--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -518,7 +518,7 @@
                         propertyHtml += '<p class="card-text"><strong>Seller: </strong>' + properties[i].seller + '</p>';
                         propertyHtml += '<div class="d-flex justify-content-between align-items-center">';
                         propertyHtml += '<div class="btn-group">';
-                        propertyHtml += '<button type="button" class="btn btn-sm btn-outline-secondary" data-bs-toggle="modal" data-bs-target="#myModal' +properties[i].id+'">Edit</button>';
+                        propertyHtml += '<button type="button" class="btn btn-sm btn-outline-secondary" data-bs-toggle="modal" data-bs-target="#myDetails' +properties[i].id+'">Details</button>';
                         propertyHtml += '<button type="button" class="btn btn-sm btn-outline-secondary" data-bs-toggle="modal" data-bs-target="#interestedPropertyModal">Interested</button>';
                         propertyHtml += '<button type="button" class="btn btn-sm btn-outline-secondary" data-bs-toggle="modal" data-bs-target="#delete' + properties[i].id + '">Delete</button>';
                         propertyHtml += '</div>';
